made some changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my page</title>
+    <title>Pali's page</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -14,5 +14,13 @@
       cupiditate cumque officiis odit voluptatem placeat labore animi quidem.
     </p>
     <h1>hello world</h1>
+    <div>
+      <h2>Welcome</h2>
+      <h3>To my webpage</h3>
+      <div>
+        <img src="images/sleeping_cat.jpg" alt="Sleeping cat" />
+        <p>text</p>
+      </div>
+    </div>
   </body>
 </html>
