cleared the project

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,20 +7,5 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex unde dolores
-      aperiam a iusto enim itaque dolor, nam explicabo eaque recusandae
-      cupiditate cumque officiis odit voluptatem placeat labore animi quidem.
-    </p>
-    <h1>hello world</h1>
-    <div>
-      <h2>Welcome</h2>
-      <h3>To my webpage</h3>
-      <div>
-        <img src="images/sleeping_cat.jpg" alt="Sleeping cat" />
-        <p>text</p>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
