layout changes and small js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,27 @@
     <title>Pali's page</title>
 
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="bg-blue">
+      <h2>Jimmy</h2>
+    </section>
+
+    <section class="bg-orange">
+      <h2>Nudli</h2>
+    </section>
+
+    <section class="bg-red">
+      <h2>Ropi</h2>
+    </section>
+
+    <section class="bg-green">
+      <h2>Lola</h2>
+    </section>
+
+    <section class="bg-yellow">
+      <h2>Feco</h2>
+    </section>
+  </body>
 </html>
